--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "cors": "2.8.4",
     "request": "2.87.0",
+    "http": "0.0.1-security"
     "html2canvas-proxy": "1.0.1"
   },
   "peerDependencies": {
